# auto-conso

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api/: login.py  odoo.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.vue
client/src/components/: Login.vue  Main.vue  Summary.vue
client/src/mixin/: authHeader.js  url.js
client/src/plugins/: vuetify.js
client/src/store/: authentication.js  index.js  odoo.js
